Update: Changed login text

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,12 +11,12 @@
         <div class="d-grid gap-3 col-md-8 mx-auto">
             {# Option 1: Login (Credentials) #}
             <a href="/scan?site={{ sites.get('greenville', 'greenville') }}" class="btn btn-primary btn-lg">
-                Check-in with Credentials
+                Employee Check-in
             </a>
 
             {# Option 2: Visitor (Manual) #}
             <a href="/visitor?site={{ sites.get('greenville', 'greenville') }}" class="btn btn-secondary btn-lg">
-                Guest / Visitor Check-in
+                Visitor Check-in
             </a>
         </div>
 
