--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,7 @@
         
         <div class="d-grid gap-3 col-md-8 mx-auto">
             {# Option 1: Login (Credentials) #}
-            <a href="/scan?site={{ sites.get('greenville', 'greenville') }}" class="btn btn-primary btn-lg">
+            <a href="/scan?site={{ sites.get('greenville', 'greenville') }}" class="btn btn-danger btn-lg" style="background-color: #CE0037; border-color: #CE0037;">
                 Employee Check-in
             </a>
 
